tests/unit-fail/j075b.ref
Error: CTM1
Description: Variable-length array with length less than or equal to zero.
Type: Undefined behavior.
See also: C11 sec. 6.7.6.2:5
  at main(j075b.c:5)
  at <file-scope>(<unknown>)
